--- a/Example/03-02-componentData.html
+++ b/Example/03-02-componentData.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>03-02-componentData</title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/layout.css">
-  <style type="text/css">
-    [v-cloak]{
-      display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>03-02-componentData</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <style type="text/css">
+        [v-cloak] {
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
-  <div id="app" v-cloak>
-    <counter></counter>
-    <counter></counter>
-    <counter></counter>
-  </div>
-  <script src="js/vue.js"></script>
-  <script>
-    // var data = {
-    //   count:0
-    // }
-    var data = function(){
-      return {
-        count:0
-      }
-    }
-    Vue.component('counter',{
-      data:data,
-      template:`
-        <input type="button" :value="count"
-          @click="count++">
-      `
-    })
-    var vm = new Vue({
-      el:'#app',
-    })
-  </script>
+    <div id="app" v-cloak>
+        <counter :count="count" @imcrement="count++"></counter>
+        <counter :count="count" @imcrement="count++"></counter>
+        <counter :count="count" @imcrement="count++"></counter>
+    </div>
+    <script src="js/vue.js"></script>
+    <script>
+        // var data = {
+        //     count: 0
+        // }
+        var data = function() {
+            return {
+                count: 0
+            }
+        }
+        Vue.component('counter', {
+            props: ['count'],
+            template: `
+            <input type="button" :value="count" @click="$emit('imcrement')">
+            `
+        })
+        new Vue({
+            el: '#app',
+            data: data
+
+        })
+    </script>
 </body>
+
 </html>
