--- a/Example/03-04-slideShow.html
+++ b/Example/03-04-slideShow.html
@@ -14,8 +14,13 @@
         <div class="container" v-if="imgList.length">
             <slide-component :active="active" :list="imgList" @next="nextHandler">
             </slide-component>
+            <!-- <slide-component :active="active" :list="imgList" @click.native="nextHandler">
+            </slide-component> -->
+            <!-- <nav-component :active="active" :total="imgList.length" @click.native="changeHandler">
+            </nav-component> -->
             <nav-component :active="active" :total="imgList.length" @change="changeHandler">
             </nav-component>
+            <navbar-component @nextpage="nextHandler" @prev="prevHandler"></navbar-component>
         </div>
     </div>
     <script src="js/vue.js"></script>
